@@ -801,6 +801,7 @@ gchar 	   *folder_get_identifier		(Folder *folder);
 /* return value is locale charset */
 gchar      *folder_item_get_identifier		(FolderItem	*item);
 FolderItem *folder_find_item_from_identifier	(const gchar	*identifier);
+FolderItem *folder_get_item_from_identifier	(const gchar	*identifier);
 gchar 	   *folder_item_get_name		(FolderItem 	*item);
 
 FolderItem *folder_get_default_inbox	(void);
